--- a/package.json
+++ b/package.json
@@ -1,20 +1,49 @@
 {
-  "name": "say-hola",
   "private": true,
+  "name": "say-hola-workspace",
+  "version": "0.1.0",
+  "description": "Spread positivity and diversity with a constant flow of hellos!",
+  "keywords": [
+    "say-hola",
+    "hola",
+    "say-hello",
+    "greeting",
+    "internationalization",
+    "translation",
+    "language",
+    "typescript",
+    "utility"
+  ],
+  "homepage": "https://github.com/brionmario/say-hola#readme",
+  "bugs": {
+    "url": "https://github.com/brionmario/say-hola/issues"
+  },
+  "license": "MIT",
+  "author": "Brion Mario",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brionmario/say-hola"
+  },
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "dev": "turbo run dev --parallel",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,json,md,mdx}\"",
+    "lint": "turbo run lint",
+    "publish:packages": "changeset publish",
+    "publish:release": "semantic-release",
+    "test": "turbo run test",
+    "typecheck": "turbo run typecheck",
+    "version:packages": "changeset version && pnpm install --lockfile-only"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.1.0",
-    "turbo": "latest"
-  },
-  "packageManager": "pnpm@8.9.0",
-  "engines": {
-    "node": ">=18"
+    "@brionmario/eslint-plugin": "^0.2.9",
+    "@brionmario/prettier-config": "^0.1.0",
+    "@changesets/changelog-github": "^0.4.8",
+    "@changesets/cli": "^2.26.0",
+    "eslint": "^8.30.0",
+    "eslint-config-turbo": "^1.10.3",
+    "prettier": "^2.8.1",
+    "turbo": "^1.11.2"
   }
 }
