--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,12 +31,11 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/brionmario/say-hola/",
-    "directory": "lib"
+    "directory": "packages/core"
   },
   "scripts": {
     "build": "esbuild src/index.ts --format=cjs --bundle --minify --outfile=dist/index.js",
     "clean:dist": "rimraf dist",
-    "dev": "// dev",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,json,md,mdx}\"",
     "test": "NODE_OPTIONS=--experimental-vm-modules pnpm jest --passWithNoTests",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
