--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "next": "14.0.4",
+    "say-hola": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5",
