--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,7 @@
   },
   "license": "MIT",
   "author": "Brion Mario",
-  "type": "commonjs",
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
@@ -34,8 +34,9 @@
     "directory": "packages/core"
   },
   "scripts": {
-    "build": "esbuild src/index.ts --format=cjs --bundle --minify --outfile=dist/index.js",
+    "build": "pnpm clean:dist && rollup -c rollup.config.cjs",
     "clean:dist": "rimraf dist",
+    "dev": "pnpm clean:dist && rollup -c rollup.config.cjs --watch --watch.buildDelay 500",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,json,md,mdx}\"",
     "test": "NODE_OPTIONS=--experimental-vm-modules pnpm jest --passWithNoTests",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -44,11 +45,17 @@
   "devDependencies": {
     "@brionmario/eslint-plugin": "^0.2.9",
     "@brionmario/prettier-config": "^0.1.0",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/node": "^20.10.6",
-    "esbuild": "^0.19.11",
-    "eslint": "^8.30.0",
+    "eslint": "^8.56.0",
     "prettier": "^2.8.1",
     "rimraf": "^4.4.1",
+    "rollup": "^4.9.2",
+    "rollup-plugin-dts": "^6.1.0",
     "tslib": "^2.5.0",
     "typescript": "^5.3.3"
   },
