--- a/packages/core/tsconfig.lib.json
+++ b/packages/core/tsconfig.lib.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "outDir": "./dist",
-    "declarationDir": "dist/types",
+    "declarationDir": "dist",
     "types": ["node"]
   },
   "exclude": [
@@ -16,5 +16,5 @@
     "**/*.spec.jsx",
     "**/*.test.jsx"
   ],
-  "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.json", "types/**/*.d.ts", "jest.config.js"]
+  "include": ["src/**/*"]
 }
