--- a/docs/package.json
+++ b/docs/package.json
@@ -1,22 +1,53 @@
 {
+  "private": true,
   "name": "say-hola-docs",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "docs:dev": "vitepress dev",
-    "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "dev": "next dev",
+    "build": "next build",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css,json,md,mdx}\"",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "react-say-hola": "workspace:*",
-    "say-hola": "workspace:*"
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
+    "framer-motion": "^11.2.12",
+    "lucide-react": "0.105.0-alpha.4",
+    "next": "^13.4.8",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "say-hola-react": "workspace:*",
+    "say-hola": "workspace:*",
+    "sharp": "^0.31.3",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@brionmario/eslint-plugin": "^0.2.9",
     "@brionmario/prettier-config": "^0.1.0",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.56.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.8.1",
-    "vitepress": "1.0.0-rc.35",
-    "vue": "^3.4.5"
-  }
+    "shiki": "^1.10.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^4.9.5"
+  },
+  "description": "A Next.js 13 template for building apps with Radix UI and Tailwind CSS.",
+  "main": "postcss.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "author": "",
+  "license": "ISC"
 }
