--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,9 @@ jobs:
       - name: ⬇️ Checkout
         id: checkout
         uses: actions/checkout@v2.3.3
+        with:
+          token: ${{ env.GH_TOKEN }}
+          fetch-depth: 0
 
       - name: 🟢 Setup node
         id: setup-node
