--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -8,7 +8,7 @@ on:
       basePath:
         description: |
           The base path to deploy the docs to. Default is "" (https://brionmario.github.io/say-hola/).
-          Note: Do not include a leading or trailing slash.
+          Note: Include a path with a leading slash (/app) or leave empty for the root.
         default: ''
         type: string
 
@@ -76,7 +76,7 @@ jobs:
         run: |
           cd docs
           cp .env.example .env.local
-          echo "NEXT_PUBLIC_BASE_PATH=/${{ github.event.inputs.basePath }}" >> .env.local
+          echo "NEXT_PUBLIC_BASE_PATH=${{ github.event.inputs.basePath }}" >> .env.local
           echo "BUILD_MODE=static" >> .env.local
           pnpm build
 
