--- a/packages/say-hola-react/package.json
+++ b/packages/say-hola-react/package.json
@@ -21,8 +21,9 @@
   "license": "MIT",
   "author": "Brion Mario",
   "type": "module",
-  "main": "dist/cjs/index.js",
+  "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
+  "commonjs": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist",
